ucms_contrib/ucms_contrib.css
/* Slide wrapper */
#ucms-contrib-cart {
  position: fixed;
  top: 0;
  right: 0;
  width: 220px;
  height: 100%;
}

#ucms-cart-toggle {
  position: absolute;
  display: inline-block;
  top: 50%;
  margin-top: -1em;
  right: 100%;
  background: #333;
  padding: 10px 0 10px 5px;
  border-radius: 10px 0 0 10px;
  font-size: 18px;
}

#ucms-cart {
  position: absolute;
  top: 0;
  bottom: 6em;
  background: #333;
  z-index: 2;
  padding: 70px 0 0 0;
  width: 100%;
}

#ucms-cart.drop-highlighted {
  border: dashed 5px #fff;
  transition: .5s;
}

#ucms-cart .error {
  clear: both;
  padding: 5px;
  font-weight: bold;
  color: #f00;
}

#ucms-cart .item-list ul {
  list-style: none;
  padding: 5px;
}

#ucms-cart .item-list a {
  color: #fff;
  font-weight: bold;
}

#ucms-cart h2 {
  color: #fff;
}

.ucms-cart-item {
  overflow: hidden;
  height: 100px;
  padding-left: 0;
  padding-right: 0;
}

.ucms-cart-item h2 {
  font-size: 12px;
}

.ucms-cart-item > form {
  display: none;
}

.ucms-cart-item:hover > form {
  display: block;
}

.ucms-cart-item img {
  width: 100%;
  height: 100%;
}

.ucms-cart-item h2 a {
  color: white;
  font-weight: bold;
}

.ucms-cart-item h2 {
  background-color: #333;
}

#ucms-cart-trash {
  position: absolute;
  background: #600;
  color: #fff;
  bottom: 0;
  width: 220px;
  text-align: center;
  z-index: 1;
  box-sizing: border-box;
}

#ucms-cart-trash span {
  margin: .25em;
  font-size: 3em;
  display: inline-block;
}

#ucms-cart-trash.drop-highlighted {
  border: dashed .4em #fff;
  transition: .5s;
}

#ucms-cart-trash.drop-highlighted-hover {
  box-shadow: inset 0 0 5px 10px #fff;
}

#ucms-cart-trash.drop-highlighted span {
  margin: .4em;
}

#ucms-cart-trash span {
  margin: .5em;
  font-size: 3em;
}

body [data-region].drop-highlighted {
  border: dashed .2em #018fe2;
  min-height: 2em;
  transition: .5s linear;
  padding: 10px;
}

body [data-region].drop-highlighted:after {
  content: " ";
  display: table;
  clear: both;
}

body [data-region].drop-highlighted-over {
  box-shadow: inset 0 0 5px 10px #018fe2;
}

.block-ucms-layout.ucms-layout-empty-block, .ucms-layout-empty-region {
  display: none;
}

.ucms-layout-empty-block-hover, .ucms-layout-empty-region-hover {
  height: 100px;
}

.region-page-top {
  z-index: 2;
}

#page-wrapper {
  z-index: 1;
}

.ui-sortable [data-nid],
.ui-sortable [data-nid] a,
.ui-draggable,
.ui-draggable a {
  cursor: move;
  z-index: 100;
}

.ui-draggable.ui-draggable-dragging,
.ui-sortable-helper {
  max-width: 100px;
  max-height: 100px;
  overflow: hidden;
  background: #fff;
  border-radius: 50px;
  -ms-animation: pulse 1s linear infinite;
  -moz-animation: pulse 1s linear infinite;
  -webkit-animation: pulse 1s linear infinite;
  animation: pulse 1s linear infinite;
  border: solid 1px #018fe2;
}

.ui-sortable-placeholder {
  background: rgba(1, 143, 226, .75);
  margin: 5px;
  border-radius: 10px;
  height: 100px;
}

/* Fix fucking bootstrap banner */
#page-header:after,
.main-container > .row:after {
  content: " ";
  display: table;
  clear: both;
}

@keyframes pulse {
  0% {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -webkit-transform: scale(0.8);
    -moz-transform: scale(0.8);
    -o-transform: scale(0.8);
    -ms-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -o-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

@-moz-keyframes pulse {
  0% {
    -moz-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -moz-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -moz-transform: scale(1);
    transform: scale(1);
  }
}

@-webkit-keyframes pulse {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -webkit-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}

@-ms-keyframes pulse {
  0% {
    -ms-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -ms-transform: scale(0.8);
    transform: scale(0.8);
  }
  100% {
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

